<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
         https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.5</version>
        <relativePath/>
    </parent>
    
    <groupId>com.woi</groupId>
    <artifactId>backend-v2</artifactId>
    <version>2.0.0</version>
    <packaging>pom</packaging>
    <name>backend-v2-tazkiyyah</name>
    <description>Wheel of Islam Tazkiyyah App Backend V2 (Clean Architecture + Modular Monolith - Maven Multi-Module)</description>
    
    <!-- Build configuration updated for better dependency management -->
    
    <modules>
        <module>user-module</module>
        <module>content-module</module>
        <module>learning-module</module>
        <module>assessment-module</module>
        <module>goals-okr-module</module>
        <module>application</module>
    </modules>
    
    <properties>
        <java.version>17</java.version>
        <jjwt.version>0.12.3</jjwt.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    
    <!-- Dependency Management: Versies beheren voor alle modules -->
    <dependencyManagement>
        <dependencies>
            <!-- JWT -->
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-api</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-impl</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-jackson</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            
            <!-- Internal modules - versies beheren via parent version -->
            <dependency>
                <groupId>com.woi</groupId>
                <artifactId>user-module</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.woi</groupId>
                <artifactId>content-module</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.woi</groupId>
                <artifactId>learning-module</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.woi</groupId>
                <artifactId>assessment-module</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.woi</groupId>
                <artifactId>goals-okr-module</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>3.1.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
